// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox Component snapshots should match snapshot 1`] = `
.c3 {
  width: 0.5em;
  height: 0.5em;
}

.c0 {
  pointer-events: initial;
  cursor: pointer;
  line-height: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 1em;
  height: 1em;
  border-radius: 0.25rem;
  box-shadow: 0px 0px 0px 1px #c1c7cb;
  background: #ffffff;
  border: solid 0.05em #fff;
  box-sizing: border-box;
  -webkit-transition: background 0.3s ease-out;
  transition: background 0.3s ease-out;
  color: transparent;
  fill: none;
}

.c4 {
  display: inline-block;
  margin-left: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: initial;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<CheckBox__Wrapper
  onClick={[Function]}
>
  <span
    className="c0"
    onClick={[Function]}
  >
    <CheckBox__InputWrapper>
      <span
        className="c1"
      >
        <CheckBox__Input>
          <span
            className="c2"
          >
            <Icon__Svg
              className="ft-icon"
              fill="inherit"
              height="0.5em"
              strokeWidth={1}
              width="0.5em"
            >
              <svg
                className="ft-icon c3"
                fill="inherit"
                strokeWidth={1}
              >
                <use
                  xlinkHref="/iconsprite.svg#icon-check"
                />
              </svg>
            </Icon__Svg>
          </span>
        </CheckBox__Input>
      </span>
    </CheckBox__InputWrapper>
    <CheckBox__Label>
      <span
        className="c4"
      >
        Checkbox Label
      </span>
    </CheckBox__Label>
  </span>
</CheckBox__Wrapper>
`;

exports[`CheckBox Component snapshots should match snapshot 2`] = `
.c3 {
  width: 0.5em;
  height: 0.5em;
}

.c0 {
  pointer-events: initial;
  cursor: pointer;
  line-height: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 1em;
  height: 1em;
  border-radius: 0.25rem;
  box-shadow: 0px 0px 0px 1px #c1c7cb;
  background: #146292;
  border: solid 0.05em #fff;
  box-sizing: border-box;
  -webkit-transition: background 0.3s ease-out;
  transition: background 0.3s ease-out;
  color: #ffffff;
  fill: none;
}

.c4 {
  display: inline-block;
  margin-left: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: initial;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<CheckBox__Wrapper
  onClick={[Function]}
>
  <span
    className="c0"
    onClick={[Function]}
  >
    <CheckBox__InputWrapper>
      <span
        className="c1"
      >
        <CheckBox__Input
          checked={true}
        >
          <span
            className="c2"
          >
            <Icon__Svg
              className="ft-icon"
              fill="inherit"
              height="0.5em"
              strokeWidth={1}
              width="0.5em"
            >
              <svg
                className="ft-icon c3"
                fill="inherit"
                strokeWidth={1}
              >
                <use
                  xlinkHref="/iconsprite.svg#icon-check"
                />
              </svg>
            </Icon__Svg>
          </span>
        </CheckBox__Input>
      </span>
    </CheckBox__InputWrapper>
    <CheckBox__Label>
      <span
        className="c4"
      >
        Checkbox Label
      </span>
    </CheckBox__Label>
  </span>
</CheckBox__Wrapper>
`;

exports[`CheckBox Component snapshots should match snapshot 3`] = `
.c3 {
  width: 0.5em;
  height: 0.5em;
}

.c0 {
  pointer-events: none;
  cursor: pointer;
  line-height: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 1em;
  height: 1em;
  border-radius: 0.25rem;
  box-shadow: 0px 0px 0px 1px #c1c7cb;
  background: #e4e8ea;
  border: solid 0.05em #fff;
  box-sizing: border-box;
  -webkit-transition: background 0.3s ease-out;
  transition: background 0.3s ease-out;
  color: transparent;
  fill: none;
}

.c4 {
  display: inline-block;
  margin-left: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 0.5;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<CheckBox__Wrapper
  disabled={true}
  onClick={[Function]}
>
  <span
    className="c0"
    disabled={true}
    onClick={[Function]}
  >
    <CheckBox__InputWrapper>
      <span
        className="c1"
      >
        <CheckBox__Input
          disabled={true}
        >
          <span
            className="c2"
          >
            <Icon__Svg
              className="ft-icon"
              fill="inherit"
              height="0.5em"
              strokeWidth={1}
              width="0.5em"
            >
              <svg
                className="ft-icon c3"
                fill="inherit"
                strokeWidth={1}
              >
                <use
                  xlinkHref="/iconsprite.svg#icon-check"
                />
              </svg>
            </Icon__Svg>
          </span>
        </CheckBox__Input>
      </span>
    </CheckBox__InputWrapper>
    <CheckBox__Label
      disabled={true}
    >
      <span
        className="c4"
      >
        Checkbox Label
      </span>
    </CheckBox__Label>
  </span>
</CheckBox__Wrapper>
`;

exports[`CheckBox Component snapshots should match snapshot 4`] = `
.c3 {
  width: 0.5em;
  height: 0.5em;
}

.c0 {
  pointer-events: none;
  cursor: pointer;
  line-height: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 1em;
  height: 1em;
  border-radius: 0.25rem;
  box-shadow: 0px 0px 0px 1px #c1c7cb;
  background: #e4e8ea;
  border: solid 0.05em #fff;
  box-sizing: border-box;
  -webkit-transition: background 0.3s ease-out;
  transition: background 0.3s ease-out;
  color: #949ea3;
  fill: none;
}

.c4 {
  display: inline-block;
  margin-left: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 0.5;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<CheckBox__Wrapper
  disabled={true}
  onClick={[Function]}
>
  <span
    className="c0"
    disabled={true}
    onClick={[Function]}
  >
    <CheckBox__InputWrapper>
      <span
        className="c1"
      >
        <CheckBox__Input
          checked={true}
          disabled={true}
        >
          <span
            className="c2"
          >
            <Icon__Svg
              className="ft-icon"
              fill="inherit"
              height="0.5em"
              strokeWidth={1}
              width="0.5em"
            >
              <svg
                className="ft-icon c3"
                fill="inherit"
                strokeWidth={1}
              >
                <use
                  xlinkHref="/iconsprite.svg#icon-check"
                />
              </svg>
            </Icon__Svg>
          </span>
        </CheckBox__Input>
      </span>
    </CheckBox__InputWrapper>
    <CheckBox__Label
      disabled={true}
    >
      <span
        className="c4"
      >
        Checkbox Label
      </span>
    </CheckBox__Label>
  </span>
</CheckBox__Wrapper>
`;

exports[`CheckBox Component snapshots should match snapshot 5`] = `
.c3 {
  width: 0.5em;
  height: 0.5em;
}

.c0 {
  pointer-events: initial;
  cursor: pointer;
  line-height: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 1em;
  height: 1em;
  border-radius: 0.25rem;
  box-shadow: 0px 0px 0px 1px #c1c7cb;
  background: #146292;
  border: solid 0.05em #fff;
  box-sizing: border-box;
  -webkit-transition: background 0.3s ease-out;
  transition: background 0.3s ease-out;
  color: transparent;
  fill: none;
}

.c4 {
  display: inline-block;
  margin-left: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: initial;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<CheckBox__Wrapper
  onClick={[Function]}
>
  <span
    className="c0"
    onClick={[Function]}
  >
    <CheckBox__InputWrapper>
      <span
        className="c1"
      >
        <CheckBox__Input
          checked={null}
        >
          <span
            className="c2"
          >
            <Icon__Svg
              className="ft-icon"
              fill="inherit"
              height="0.5em"
              strokeWidth={1}
              width="0.5em"
            >
              <svg
                className="ft-icon c3"
                fill="inherit"
                strokeWidth={1}
              >
                <use
                  xlinkHref="/iconsprite.svg#icon-check"
                />
              </svg>
            </Icon__Svg>
          </span>
        </CheckBox__Input>
      </span>
    </CheckBox__InputWrapper>
    <CheckBox__Label>
      <span
        className="c4"
      >
        Checkbox Label
      </span>
    </CheckBox__Label>
  </span>
</CheckBox__Wrapper>
`;
